--- a/html/profil.html
+++ b/html/profil.html
@@ -104,6 +104,7 @@
                   width="100"
                   height="100"
                 />
+                <label>Aimé</label>
               </div>
             </div>
           </div>
