--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -51,17 +51,13 @@
             >
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link ps-3" href="/index.html">Accueil</a>
+                  <a class="nav-link ps-3" href="../index.html">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Catalogue</a
-                  >
+                  <a class="nav-link" href="catalogue.html">Catalogue</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
-                    >Contact</a
-                  >
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
               <ul class="navbar-nav me-3 mb-2 mb-lg-0">
