--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             >
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link ps-3" href="/index.html">Accueil</a>
+                  <a class="nav-link ps-3 active" aria-current="page" href="#">Accueil</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link" href="html/catalogue.html"
                     >Catalogue</a
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a class="nav-link" href="/html/contact.html"
                     >Contact</a
                   >
                 </li>
@@ -77,14 +77,14 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a class="dropdown-item" href="profil.html">Mon profil</a>
+                      <a class="dropdown-item" href="/html/profil.html">Mon profil</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">Mes favoris</a>
+                      <a class="dropdown-item" href="/html/favoris.html">Mes favoris</a>
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
-                      <a class="dropdown-item" href="#"
+                      <a class="dropdown-item" href="/html/Formulaire.html"
                         >Se connecter / S'inscrire</a
                       >
                     </li>
@@ -109,7 +109,7 @@
             <div class="col-12">
               <h1>Restyle</h1>
               <p>La mode qui vous ressemble, au quotidien</p>
-              <a href="catalogue.html">
+              <a href="/html/catalogue.html">
                 <button
                   type="button"
                   id="but"
