--- a/html/vetements.html
+++ b/html/vetements.html
@@ -51,9 +51,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Contact</a
-                >
+                <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
             <ul class="navbar-nav me-3 mb-2 mb-lg-0">
@@ -68,9 +66,11 @@
                   Moi
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Mon profil</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Mes favoris</a>
+                    <a class="dropdown-item" href="profil.html">Mon profil</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="favoris.html">Mes favoris</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
@@ -99,14 +99,14 @@
           <!-- Colonne image -->
           <div class="col-md-6">
             <img
-              src="/img/zara.jpeg"
-              alt="Chemise Zara"
+              src="/img/grinch.png"
+              alt="Pull Grinch"
               class="img-fluid rounded shadow-sm w-100 object-fit-cover article"
             />
           </div>
           <!-- Colonne texte -->
           <div class="col-md-6 my-auto">
-            <h1 class="fw-bold">Chemise Zara</h1>
+            <h1 class="fw-bold">Pull Grinch</h1>
             <p class="text-muted pt-2">
               Catégorie : <span class="badge bg-secondary">Vêtement</span>
             </p>
@@ -148,7 +148,6 @@
         </div>
       </div>
     </main>
-    <hr />
     <div class="footer-basic">
       <hr />
       <footer>
