--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -120,6 +120,9 @@
                 <li>
                   <a class="dropdown-item" href="#">État (meilleur au pire)</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="#">Catégorie</a>
+                </li>
               </ul>
             </div>
             <div class="col-12 col-sm-6 col-lg-3">
