modif page accueil

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   <div class="product-action">
                     <div class="product-action-style">
 
-                      <a href="../html/catalogue.html">VOIR</> </a>
+                      <a href="../html/vetements.html">VOIR </a>
 
                     </div>
                   </div>
@@ -167,7 +167,7 @@
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
                         VOIR
@@ -191,7 +191,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/maillot-alpine.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 60€</span>
+                  <span> 60€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -207,7 +207,7 @@
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
                       VOIR
@@ -231,7 +231,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/maillot-k.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 0.01€</span>
+                  <span> 0.01€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -242,15 +242,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                       VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -258,7 +258,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -272,7 +272,7 @@
         <div class="container text-center">
           <div class="row">
             <h1 class="vet">Vêtements</h1>
-            <a href="">
+            <a href="../html/catalogue.html">
               <p class="plus">Voir plus</p>
             </a>
           </div>
@@ -286,13 +286,13 @@
                     <img src="../img/maillot-zidane.png" alt="" />
                   </a>
                   <span class="text-center"
-                    ><i class="fa fa-rupee"></i> 850€</span
+                    > 850€</span
                   >
                   <div class="product-action">
                     <div class="product-action-style">
-                      <a href="#"> <i class="fa fa-plus"></i> </a>
-                      <a href="#"> <i class="fa fa-heart">VOIR</i> </a>
-                      <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
+
+                      <a href="../html/vetements.html"> VOIR </a>
+
                     </div>
                   </div>
                 </div>
@@ -304,7 +304,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/pull.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 80€</span>
+                  <span> 80€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -315,15 +315,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -331,7 +331,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -344,7 +344,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/grinch.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 20€</span>
+                  <span>20€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -355,15 +355,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                       VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -371,7 +371,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -384,7 +384,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/elfie.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 25€</span>
+                  <span> 25€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -395,15 +395,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/vetements.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                     VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -411,7 +411,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -425,7 +425,7 @@
         <div class="container text-center">
           <div class="row">
             <h1 class="vet">Décoration</h1>
-            <a href="">
+            <a href="../html/catalogue.html">
               <p class="plus">Voir plus</p>
             </a>
           </div>
@@ -439,13 +439,13 @@
                     <img src="../img/tabou.png" alt="" />
                   </a>
                   <span class="text-center"
-                    ><i class="fa fa-rupee"></i> 20€</span
+                    > 20€</span
                   >
                   <div class="product-action">
                     <div class="product-action-style">
-                      <a href="#"> <i class="fa fa-plus"></i> </a>
-                      <a href="#"> <i class="fa fa-heart">VOIR</i> </a>
-                      <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
+
+                      <a href="../html/deco.html"> VOIR </a>
+
                     </div>
                   </div>
                 </div>
@@ -457,7 +457,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/papa-noel.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 5€</span>
+                  <span> 5€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -468,15 +468,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/deco.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -484,7 +484,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -497,7 +497,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/miroir.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 15€</span>
+                  <span> 15€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -508,15 +508,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/deco.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -524,7 +524,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -537,7 +537,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/fleur.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 25€</span>
+                  <span> 25€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -548,15 +548,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/deco.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                       VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -564,7 +564,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -578,7 +578,7 @@
         <div class="container text-center">
           <div class="row">
             <h1 class="vet">Accessoires</h1>
-            <a href="">
+            <a href="../html/catalogue.html">
               <p class="plus">Voir plus</p>
             </a>
           </div>
@@ -592,13 +592,13 @@
                     <img src="../img/cuis.png" alt="" />
                   </a>
                   <span class="text-center"
-                    ><i class="fa fa-rupee"></i> 10€</span
+                    > 10€</span
                   >
                   <div class="product-action">
                     <div class="product-action-style">
-                      <a href="#"> <i class="fa fa-plus"></i> </a>
-                      <a href="#"> <i class="fa fa-heart">VOIR</i> </a>
-                      <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
+
+                      <a href="../html/objet.html"> VOIR </a>
+                       </a>
                     </div>
                   </div>
                 </div>
@@ -610,7 +610,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/fete.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 7€</span>
+                  <span> 7€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -621,15 +621,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/objet.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -637,7 +637,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -650,7 +650,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/lunette.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i>3€</span>
+                  <span>3€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -661,15 +661,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/objet.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                        VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -677,7 +677,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
@@ -690,7 +690,7 @@
                   <a href="#" data-abc="true">
                     <img src="../img/couleur.png" alt="" />
                   </a>
-                  <span><i class="fa fa-rupee"></i> 50€</span>
+                  <span> 50€</span>
                   <div class="product-action">
                     <div class="product-action-style">
                       <a
@@ -701,15 +701,15 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-plus"></i>
+
                       </a>
                       <a
                         class="action-heart"
                         title="Wishlist"
-                        href="../html/catalogue.html"
+                        href="../html/objet.html"
                         data-abc="true"
                       >
-                        <i class="fa fa-heart">VOIR</i>
+                       VOIR
                       </a>
                       <a
                         class="action-cart"
@@ -717,7 +717,7 @@
                         href="#"
                         data-abc="true"
                       >
-                        <i class="fa fa-shopping-cart"></i>
+
                       </a>
                     </div>
                   </div>
