modif page formulaire

--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -127,7 +127,7 @@
                                 type="email"
                                 name="logemail"
                                 class="form-style"
-                                placeholder="Your Email"
+                                placeholder="Email"
                                 id="logemail"
                                 autocomplete="off"
                               />
@@ -138,16 +138,16 @@
                                 type="password"
                                 name="logpass"
                                 class="form-style"
-                                placeholder="Your Password"
+                                placeholder="Mot de passe"
                                 id="logpass"
                                 autocomplete="off"
                               />
                               <i class="input-icon uil uil-lock-alt"></i>
                             </div>
-                            <a href="#" class="btn mt-4">submit</a>
+                            <a href="#" class="btn mt-4">Envoyé</a>
                             <p class="mb-0 mt-4 text-center">
                               <a href="#0" class="link"
-                                >Forgot your password?</a
+                                >Mot de passe oublier?</a
                               >
                             </p>
                           </div>
@@ -162,7 +162,7 @@
                                 type="text"
                                 name="logname"
                                 class="form-style"
-                                placeholder="Your Full Name"
+                                placeholder="Nom Prenom"
                                 id="logname"
                                 autocomplete="off"
                               />
@@ -173,7 +173,7 @@
                                 type="email"
                                 name="logemail"
                                 class="form-style"
-                                placeholder="Your Email"
+                                placeholder="Email"
                                 id="logemail"
                                 autocomplete="off"
                               />
@@ -184,13 +184,13 @@
                                 type="password"
                                 name="logpass"
                                 class="form-style"
-                                placeholder="Your Password"
+                                placeholder="Mot de passe"
                                 id="logpass"
                                 autocomplete="off"
                               />
                               <i class="input-icon uil uil-lock-alt"></i>
                             </div>
-                            <a href="#" class="btn mt-4">submit</a>
+                            <a href="#" class="btn mt-4">Envoyé</a>
                           </div>
                         </div>
                       </div>
