--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/header.css" />
-    <link rel="stylesheet" href="../css/Formulaire.css" />
+    <link rel="stylesheet" href="../css/formulaire.css" />
     <link rel="stylesheet" href="../css/footer.css" />
   </head>
   <body>
