--- a/html/profil.html
+++ b/html/profil.html
@@ -104,13 +104,170 @@
                   width="100"
                   height="100"
                 />
-                <label>Aimé</label>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section></section>
+      <section>
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-12 padding-top d-flex justify-content-center">
+              <h2>Mes annonces publiés</h2>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3">
+              <button
+                type="button"
+                class="btn"
+                data-bs-toggle="modal"
+                data-bs-target="#article1"
+              >
+                <div class="card h-100">
+                  <img src="/img/grinch.png" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">Pull Grinch - 35€</h5>
+                    <p class="card-text">
+                      Pull Grinch, peut utilisé en très bon état
+                    </p>
+                    <p class="card-text">
+                      <small class="text-body-secondary"
+                        >Posté il y a 15 mins</small
+                      ><br />
+                      <i class="fa-solid fa-trash"></i>
+                    </p>
+                  </div>
+                </div>
+              </button>
+            </div>
+
+            <!-- Button trigger modal -->
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="article1"
+              data-bs-backdrop="static"
+              data-bs-keyboard="false"
+              tabindex="-1"
+              aria-labelledby="staticBackdropLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                      Pull Grinch
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Pull Grinch, peu utilisé en très bon état.</p>
+                    <ul class="text-start">
+                      <li>Très bon état</li>
+                      <li>Taille M</li>
+                      <li>Prix : 35€</li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Fermer
+                    </button>
+                    <a href="/html/vetements.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-3">
+              <button
+                type="button"
+                class="btn"
+                data-bs-toggle="modal"
+                data-bs-target="#article2"
+              >
+                <div class="card h-100">
+                  <img src="/img/tabou.png" class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <h5 class="card-title">Tabouret - 10€</h5>
+                    <p class="card-text">
+                      Tabouret, peu utilisé et en bon état (en double)
+                    </p>
+                    <p class="card-text">
+                      <small class="text-body-secondary"
+                        >Posté il y a 2 heures</small
+                      ><br />
+                      <i class="fa-solid fa-trash"></i>
+                    </p>
+                  </div>
+                </div>
+              </button>
+            </div>
+
+            <!-- Button trigger modal -->
+
+            <!-- Modal -->
+            <div
+              class="modal fade"
+              id="article2"
+              data-bs-backdrop="static"
+              data-bs-keyboard="false"
+              tabindex="-1"
+              aria-labelledby="staticBackdropLabel"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                      Tabouret
+                    </h1>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Close"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>Tabouret, peu utilisé et en bon état</p>
+                    <ul class="text-start">
+                      <li>Bon état</li>
+                      <li>40cm de hauteur & 30cm de largeur</li>
+                      <li>Prix : 10€</li>
+                    </ul>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-bs-dismiss="modal"
+                    >
+                      Fermer
+                    </button>
+                    <a href="/html/objet.html">
+                      <button type="button" class="btn btn-primary">
+                        Aller à la page
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <div class="footer-basic">
       <hr />
