--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -76,7 +76,9 @@
                       <a class="dropdown-item" href="profil.html">Mon profil</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">Mes favoris</a>
+                      <a class="dropdown-item" href="favoris.html"
+                        >Mes favoris</a
+                      >
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
