--- a/html/contact.html
+++ b/html/contact.html
@@ -19,7 +19,6 @@
     />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/contact.css" />
-
     <link rel="stylesheet" href="/css/footer.css" />
   </head>
   <body>
@@ -64,13 +63,15 @@
                   Moi
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Mon profil</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Mes favoris</a>
+                    <a class="dropdown-item" href="profil.html">Mon profil</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="favoris.html">Mes favoris</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="formulaire.html"
                       >Se connecter / S'inscrire</a
                     >
                   </li>
