--- a/html/profil.html
+++ b/html/profil.html
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="catalogue.html">Catalogue</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
             <ul class="navbar-nav me-3 mb-2 mb-lg-0">
@@ -65,13 +65,15 @@
                   Moi
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Mon profil</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Mes favoris</a>
+                    <a class="dropdown-item" href="#">Mon profil</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="favoris.html">Mes favoris</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="formulaire.html"
                       >Se connecter / S'inscrire</a
                     >
                   </li>
