--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                   <div class="input-group">
                     <input
                       type="email"
-                      class="form-control"
+                      class="form-control email"
                       placeholder="Email"
                     />
                     <span class="input-group-btn"></span>
