--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -52,7 +52,10 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="contact.html"
                   >Contact</a
                 >
               </li>
@@ -73,11 +76,11 @@
                     <a class="dropdown-item" href="profil.html">Mon profil</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Mes favoris</a>
+                    <a class="dropdown-item" href="favoris.html">Mes favoris</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="formulaire.html"
                       >Se connecter / S'inscrire</a
                     >
                   </li>
@@ -735,13 +738,13 @@
         </div>
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="../html/accueil.html">Accueil</a>
+            <a href="../index.html">Accueil</a>
           </li>
           <li class="list-inline-item">
             <a href="../html/catalogue.html">Catalogue</a>
           </li>
           <li class="list-inline-item">
-            <a href="../html/Formulaire.html">Connexion</a>
+            <a href="../html/formulaire.html">Connexion</a>
           </li>
           <li class="list-inline-item">
             <a href="../html/favoris.html">Favoris</a>
