--- a/html/favoris.html
+++ b/html/favoris.html
@@ -80,7 +80,7 @@
                     </li>
                     <li><hr class="dropdown-divider" /></li>
                     <li>
-                      <a class="dropdown-item" href="#"
+                      <a class="dropdown-item" href="formulaire.html"
                         >Se connecter / S'inscrire</a
                       >
                     </li>
