--- a/html/vetements.html
+++ b/html/vetements.html
@@ -51,7 +51,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
             <ul class="navbar-nav me-3 mb-2 mb-lg-0">
@@ -74,7 +74,7 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a class="dropdown-item" href="#"
+                    <a class="dropdown-item" href="formulaire.html"
                       >Se connecter / S'inscrire</a
                     >
                   </li>
