--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -131,7 +131,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article1"
               >
@@ -205,7 +205,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article2"
               >
@@ -279,7 +279,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article3"
               >
@@ -350,7 +350,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article4"
               >
@@ -430,7 +430,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article5"
               >
@@ -506,7 +506,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article6"
               >
@@ -581,7 +581,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button◊
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article7"
               >
@@ -653,7 +653,7 @@
             <div class="col-12 col-sm-6 col-lg-3">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article8"
               >
