--- a/html/profil.html
+++ b/html/profil.html
@@ -103,10 +103,16 @@
                   src="https://randomuser.me/api/portraits/men/59.jpg"
                   alt="vendeur"
                   class="img-thumbnail rounded-circle"
-                  width="100"
-                  height="100"
+                  width="120"
+                  height="120"
                 />
               </div>
+            </div>
+          </div>
+          <!-- Nom de l'utilisateur -->
+          <div class="row justify-content-center mt-5">
+            <div class="col-12 text-center">
+              <h3>Aimé</h3>
             </div>
           </div>
         </div>
@@ -117,10 +123,10 @@
             <div class="col-12 padding-top d-flex justify-content-center">
               <h2>Mes annonces publiés</h2>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 d-flex">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article1"
               >
@@ -192,10 +198,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-3">
+            <div class="col-12 col-sm-6 col-lg-3 d-flex">
               <button
                 type="button"
-                class="btn"
+                class="btn w-100"
                 data-bs-toggle="modal"
                 data-bs-target="#article2"
               >
@@ -266,6 +272,33 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="mt-4">
+        <div class="container-fluid">
+          <h2 class="padding-top text-center mb-4">Paramètres Utilisateur</h2>
+          <div class="row justify-content-center">
+            <div class="col-12 col-sm-6">
+              <form>
+                <div class="mb-3">
+                  <label for="name" class="form-label">Nom</label>
+                  <input type="text" class="form-control" id="name" />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input type="email" class="form-control" id="email" />
+                </div>
+                <div class="mb-3">
+                  <label for="pw" class="form-label">Mot de passe</label>
+                  <input type="password" class="form-control" id="pw" />
+                </div>
+                <button type="submit" class="btn btn-primary w-100">
+                  Enregistrer
+                </button>
+              </form>
             </div>
           </div>
         </div>
