--- a/html/contact.html
+++ b/html/contact.html
@@ -102,9 +102,9 @@
             <h2>Nous transmettre un message</h2>
           </div>
           <div class="row">
-            <div class="col-lg-7 mx-auto pt-5">
-              <div class="card mt-2 mx-auto p-4 bg-light">
-                <div class="card-body bg-light">
+            <div class="col-8 mx-auto pt-5">
+              <div class="card mt-2 mx-auto p-4 bg-body-secondary">
+                <div class="card-body bg-body-secondary">
                   <div class="container">
                     <form id="contact-form" role="form">
                       <div class="controls">
@@ -122,7 +122,7 @@
                               />
                             </div>
                           </div>
-                          <div class="col-md-6">
+                          <div class="col-6">
                             <div class="form-group">
                               <label for="form_lastname">Nom *</label>
                               <input
@@ -137,7 +137,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="col-md-12">
+                          <div class="col-12">
                             <div class="form-group">
                               <label for="form_email">Email *</label>
                               <input
@@ -152,7 +152,7 @@
                           </div>
                         </div>
                         <div class="row">
-                          <div class="col-md-12">
+                          <div class="col-12">
                             <div class="form-group">
                               <label for="form_message">Message *</label>
                               <textarea
