--- a/html/Formulaire.html
+++ b/html/Formulaire.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="fr">
   <head>
+    <meta property="og:title" content="ReStyle" />
+    <meta
+      property="og:description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.restyle.fr/" />
+    <meta property="og:image" content="/img/white-logo.png" />
+    <meta property="og:site_name" content="ReStyle" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta
+      name="description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Formulaire</title>
+    <link rel="icon" href="/img/white-logo.png" type="image/x-icon" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ReStyle - Inscripion / Connexion</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
