--- a/html/catalogue.html
+++ b/html/catalogue.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <meta property="og:title" content="ReStyle" />
+    <meta
+      property="og:description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.restyle.fr/" />
+    <meta property="og:image" content="/img/white-logo.png" />
+    <meta property="og:site_name" content="ReStyle" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta
+      name="description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Accueil</title>
+    <link rel="icon" href="/img/white-logo.png" type="image/x-icon" />
+    <title>ReStyle - Catalogue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,8 +35,6 @@
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/footer.css" />
-
-    <link rel="icon" href="img/white-logo.png" type="image/x-icon" />
   </head>
   <body>
     <header>
