--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="ReStyle" />
+    <meta
+      property="og:description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.restyle.fr/" />
+    <meta property="og:image" content="/img/white-logo.png" />
+    <meta property="og:site_name" content="ReStyle" />
+    <meta property="og:locale" content="fr_FR" />
+    <meta
+      name="description"
+      content="Site présentant des vetements de particuliers à vendre, ainsi que tout autre type d'objets/choses possible à vendre d'occasion"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Restyle</title>
+    <title>Restyle - Accueil</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
